# video-streaming-opencv-rpclib

./: CMakeLists.txt  README.md  client.cpp  custom_mat.h  server.cpp
